# slotscheck

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  AGENTS.md  CHANGELOG.rst  Makefile  README.rst  mypy.ini  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build.yml  tests.yml
docs/: Makefile  advanced.rst  api.rst  cli.rst  conf.py  configuration.rst  discovery.rst  errors.rst  index.rst  requirements.txt
src/slotscheck/: __init__.py  __main__.py  checks.py  cli.py  common.py  config.py  discovery.py
tests/: __init__.py  conftest.py  test_checks.py  test_cli.py  test_common.py  test_config.py  test_discovery.py  test_main.py
tests/examples/: gc.py  module_singular.py  pyproject.toml
tests/examples/broken/: __init__.py
tests/examples/files/: what-is-this-directory.txt
tests/examples/files/subdir/some_module/: __init__.py
tests/examples/files/subdir/some_module/sub/: foo.py
tests/examples/implicitly_namespaced/module/: foo.py
tests/examples/module_misc/a/: __init__.py  z.py
tests/examples/module_misc/a/evil/: __init__.py
tests/examples/module_not_ok/: foo.py
tests/examples/module_not_ok/a/b/: __init__.py
tests/examples/module_ok/: __main__.py  foo.py
tests/examples/module_ok/a/: c.py
tests/examples/other/implicitly_namespaced/: bar.py
tests/examples/other/module_misc/: __init__.py  __main__.py  s.py
tests/examples/other/module_misc/a/: __init__.py
tests/examples/other/module_misc/a/b/: __main__.py
tests/src/: conftest.py  test_checks.py  test_cli.py  test_config.py  test_discovery.py
