[tool.poetry]
name = "slotscheck"
version = "0.20.0"
description = "Ensure your __slots__ are working properly."
authors = ["Arie Bovenberg <a.c.bovenberg@gmail.com>"]
license = "MIT"
classifiers = [
    "Typing :: Typed",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython"
]
packages = [
    { include = "slotscheck", from = "src" },
]
readme = "README.rst"
repository = "https://github.com/ariebovenberg/slotscheck"
homepage = "https://github.com/ariebovenberg/slotscheck"

[tool.poetry.dependencies]
python = ">=3.10"
click = "^8.0"
tomli = {version = ">=0.2.6,<3.0.0", python = "<3.11"}

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3"
isort = "^8"
mypy = {version = "^2.1", extras = ["mypyc"]}
pytest = "^9"
black = "^26"
pytest-cov = "^7.1.0"
pytest-mock = "^3.14.1"
typing_extensions = ">=4.1,<5"
ujson = "^5.10.0"  # Used as an example of an extension module.
attrs = "^26.1.0"

[tool.poetry.scripts]
slotscheck = "slotscheck.cli:root"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.hg
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = 'black'
line_length = 79

[tool.slotscheck]
strict-imports = true
require-subclass = true
require-superclass = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
