[project]
name = "slotscheck"
version = "0.20.0"
description = "Ensure your __slots__ are working properly."
authors = [{ name = "Arie Bovenberg", email = "a.c.bovenberg@gmail.com" }]
requires-python = ">=3.10"
readme = "README.rst"
license = "MIT"
classifiers = [
    "Typing :: Typed",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.0,<9",
    "tomli>=0.2.6,<3.0.0 ; python_full_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/ariebovenberg/slotscheck"
Repository = "https://github.com/ariebovenberg/slotscheck"

[project.scripts]
slotscheck = "slotscheck.cli:root"

[dependency-groups]
test = [
    "pytest>=9,<10",
    "pytest-cov>=7.1.0,<8",
    "pytest-mock>=3.14.1,<4",
    "typing_extensions>=4.1,<5",
    "ujson>=5.10.0,<6",  # not actually used. To test an extension module.
    "attrs>=26.1.0,<27",
]
typecheck = ["mypy[mypyc]>=2.1,<3"]
linting = [
    "ruff>=0.15,<0.16",
]
docs = [
    "sphinx>=8,<10",
    "furo>=2025.12.19,<2026",
    "sphinx-click~=6.2.0",
]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["uv_build>=0.11.22,<0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]

[tool.slotscheck]
strict-imports = true
require-subclass = true
require-superclass = true

[tool.coverage.run]
branch = true
omit = ["**/__main__.py"]

[tool.coverage.report]
fail_under = 100
exclude_also = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "\\.\\.\\.",
    ]

